Set ROI button updates images -- on button not needed.
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@4441 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/plugins/Projector/src/org/micromanager/projector/ProjectorControlForm.form
+++ b/plugins/Projector/src/org/micromanager/projector/ProjectorControlForm.form
@@ -36,25 +36,35 @@
                       <Component id="setRoiButton" min="-2" pref="108" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace pref="47" max="32767" attributes="0"/>
-              <Component id="calibrateButton" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" attributes="0">
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Component id="allPixelsButton" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace pref="123" max="32767" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="1" attributes="0">
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="calibrateButton" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                  </Group>
+              </Group>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
+          <Group type="102" attributes="0">
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="onButton" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="offButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="allPixelsButton" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="setRoiButton" min="-2" max="-2" attributes="0"/>
-          </Group>
-          <Group type="102" alignment="0" attributes="0">
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="calibrateButton" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="setRoiButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="calibrateButton" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -87,9 +97,18 @@
     <Component class="javax.swing.JButton" name="offButton">
       <Properties>
         <Property name="text" type="java.lang.String" value="Off"/>
+        <Property name="selected" type="boolean" value="true"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="offButtonActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="allPixelsButton">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="All Pixels"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="allPixelsButtonActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
