Introduce getLastTaggedImage and popNextTaggedImage to the core. Make RGB32 and RGB64 work in Snap, Live, and MDA. Use TaggedImages with MDA.
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@5051 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/mmstudio/src/org/micromanager/acquisition/HyperstackControls.form
+++ b/mmstudio/src/org/micromanager/acquisition/HyperstackControls.form
@@ -49,7 +49,7 @@
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/org/micromanager/icons/application_view_list.png"/>
         </Property>
-        <Property name="toolTipText" type="java.lang.String" value="View acquisition metadata"/>
+        <Property name="toolTipText" type="java.lang.String" value="View metadata and notes"/>
         <Property name="focusable" type="boolean" value="false"/>
         <Property name="horizontalTextPosition" type="int" value="0"/>
         <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
