Fix controls playback speed field.
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@5208 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/mmstudio/src/org/micromanager/acquisition/HyperstackControls.form
+++ b/mmstudio/src/org/micromanager/acquisition/HyperstackControls.form
@@ -167,7 +167,8 @@
     </Component>
     <Component class="javax.swing.JTextField" name="fpsField">
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="fpsFieldActionPerformed"/>
+        <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="fpsFieldFocusLost"/>
+        <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="fpsFieldKeyReleased"/>
       </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="fpsLabel">
